# catbot

./: .gitignore  LICENSE  README.md  configure.bat  requirements.txt  setup.cfg
src/catbot/: __init__.py  __main__.py  commands.py  config.py  events.py
