[metadata]
name = catbot
version = 0.0.0
author = Katie Casamento
author_email = cas28@pdx.edu
description = A Discord bot to summon and rate pictures of cats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/katiecasamento/catbot
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
